# RationalCalculator

./: CMakeLists.txt  README.md
include/: teletactica.h
src/: CMakeLists.txt  main.cpp  teletactica.cpp
tests/: CMakeLists.txt  test_teletactica.cpp
